--- a/templates/login.html
+++ b/templates/login.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
-<h1>Sign In</h1>
+<h1>Submit Tag</h1>
 <form action="" method="post" name="tag">
     {{form.hidden_tag()}}
     <p>
@@ -9,8 +9,11 @@
         {{form.tagid(size=80)}}<br>
     </p>
      <p>
-        Please enter your clip ID:<br>
+        Please enter your clip's id:<br>
         {{form.clipid(size=80)}}<br>
+        {% for error in form.errors.openid %}
+        <span style="color: red;">[{{error}}]</span>
+        {% endfor %}<br>
     </p>
     <p><input type="submit" value="Submit Tag"></p>
 </form>
